fix all overlap changes

--- a/public/assets/scss/utils/_dark_variables.scss
+++ b/public/assets/scss/utils/_dark_variables.scss
@@ -1,5 +1,5 @@
 :root {
-    --theme-color: #0da487;
+    --theme-color: #68b836;
 }
 
 $white: #2a2d2d;
